hphp/hack/test/typecheck/typing_fail_cast.php.exp
File "typing_fail_cast.php", line 24, characters 21-22:
Encountered unexpected token '$x'. (Parsing[1002])
